# ya-algorithm-training-1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/lesson_0/: a.cpp
src/lesson_1/: a.cpp  b.cpp  c.cpp  d.cpp
